[gd_scene load_steps=3 format=3 uid="uid://d2dskmnmwub7o"]

[ext_resource type="Script" path="res://Script/DemoMsc.gd" id="1_fh3nh"]
[ext_resource type="FontFile" uid="uid://du5po75t5by2" path="res://Resource/Font/汉仪洛天依体简.ttf" id="2_jft6h"]

[node name="DemoMsc" type="HBoxContainer"]
theme_override_constants/separation = 2
script = ExtResource("1_fh3nh")

[node name="MscTitle" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_jft6h")
theme_override_font_sizes/font_size = 30
text = "0000"

[node name="MAXTitle" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_jft6h")
theme_override_font_sizes/font_size = 20
text = "最高 HIGHEST: "

[node name="ScoreTitle" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_jft6h")
theme_override_font_sizes/font_size = 22

[node name="InfoButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_jft6h")
theme_override_font_sizes/font_size = 28
text = " Info "

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2

[connection signal="button_down" from="InfoButton" to="." method="_on_info_button_button_down"]
